toggle hide and show on popup

--- a/src/popup.html
+++ b/src/popup.html
@@ -3,11 +3,22 @@
   <head>
     <meta charset="utf-8">
     <link href="styles/popup.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   </head>
   <body>
     <div id="app" class="popup-content">
       <h1 class="app-name">No Show</h1>
 
+
+      <div class="row">
+        <div class="ten column">Hide notifications</div>
+        <div class="two column toggle-switch">
+          <i class="fa fa-toggle-on" aria-hidden="true"></i>
+          <i class="fa fa-toggle-off" aria-hidden="true"></i>
+        </div>
+      </div>
+      
       <div id="display-container"></div>
 
       <footer>
