--- a/src/popup.html
+++ b/src/popup.html
@@ -8,25 +8,30 @@
   </head>
   <body>
     <div id="app" class="popup-content">
-      <h1 class="app-name">No Show</h1>
+      <h2 class="app-name">No Show</h2>
 
 
-      <div class="row">
+      <div class="row" style="text-align: center">
         <div class="ten column">Hide notifications</div>
         <div class="two column toggle-switch">
           <i class="fa fa-toggle-on" aria-hidden="true"></i>
           <i class="fa fa-toggle-off" aria-hidden="true"></i>
         </div>
       </div>
-      
+
       <div id="display-container"></div>
 
-      <footer>
-        <p>
+      <footer style="text-align: center; margin-top: 10px">
+        <a href="#" class="button js-options">
+          Settings
+        </a>
+        <!-- <p>
           <small>
-            <a href="#" class="js-options">Options</a>
+            <a href="#" class="js-options">
+                <i class="fa fa-cog" aria-hidden="true"></i>
+            </a>
           </small>
-        </p>
+        </p> -->
       </footer>
     </div>
     
