--- a/src/options.html
+++ b/src/options.html
@@ -10,8 +10,8 @@
   <div class="grid">
     <div class="unit whole center-on-mobiles">
       <div class="heading">
-        <h1>Extension Boilerplate</h1>
-        <p class="lead">A foundation for creating cross-browser extensions</p>  
+        <h1>No show</h1>
+        <p class="lead">A simple chrome extension to suppress notifications on facebook, twitter and youtube.</p>  
       </div>
     </div>
   </div>
@@ -27,26 +27,11 @@
             <label><input class="js-radio lavender" type="radio" name="radio" value="lavender">Lavender</label>
           </div>
         </div>
-        
-        <div class="option">
-          <em class="text-muted">...display your extensions' options here...</em>
-        </div>
 
       </div>
     </div>  
   </section>
   
-  
-  <footer class="main-footer">
-    <div class="grid">
-      <div class="unit whole center-on-mobiles">
-        <p class="text-center text-muted">
-          &copy; Extension Boilerplate
-        </p>
-      </div>
-    </div>
-  
-  </footer>
   <script src="scripts/options.js"></script>
 </body>
 </html>
